clusters/k8s-robbinsdale/apps/media/emby/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
spec:
  selector:
    app: emby
  ports:
  - name: http
    port: 8096
    protocol: TCP
    targetPort: 8096
  type: ClusterIP
