clusters/k8s-robbinsdale/apps/media/emby/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emby
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "emby.rajsingh.info"
    - "emby.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: emby
          port: 8096
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
